--- a/src/main/resources/de/craftingit/Main.fxml
+++ b/src/main/resources/de/craftingit/Main.fxml
@@ -19,11 +19,11 @@
 
 <AnchorPane fx:id="anchorPane_main" onDragDone="#searchArchives" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.craftingit.C_Main">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="148.0" layoutX="15.0" layoutY="33.0" stroke="#909090" strokeType="INSIDE" width="351.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="148.0" layoutX="15.0" layoutY="33.0" stroke="#909090" strokeType="INSIDE" width="366.0" />
       <Label layoutX="24.0" layoutY="36.0" text="Partition" />
-      <Button fx:id="button_updateRoots" layoutX="114.0" layoutY="53.0" mnemonicParsing="false" onAction="#updateRoots" text="Aktualisieren" />
-      <ComboBox fx:id="comboBox_roots" layoutX="24.0" layoutY="53.0" onAction="#changeDir" prefHeight="25.0" prefWidth="84.0" />
-      <Button fx:id="button_search" layoutX="14.0" layoutY="201.0" mnemonicParsing="false" onAction="#searchArchives" text="Suchen" />
+      <Button fx:id="button_updateRoots" layoutX="114.0" layoutY="53.0" maxWidth="100.0" minHeight="25.0" minWidth="100.0" mnemonicParsing="false" onAction="#updateRoots" prefHeight="25.0" prefWidth="100.0" text="Aktualisieren" />
+      <ComboBox fx:id="comboBox_roots" layoutX="24.0" layoutY="53.0" prefHeight="25.0" prefWidth="84.0" />
+      <Button fx:id="button_search" layoutX="14.0" layoutY="201.0" maxWidth="74.0" minHeight="25.0" minWidth="74.0" mnemonicParsing="false" onAction="#searchArchives" prefHeight="25.0" prefWidth="74.0" text="Suchen" />
       <ComboBox fx:id="comboBox_formats" layoutX="24.0" layoutY="100.0" prefHeight="25.0" prefWidth="84.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="148.0" layoutX="435.0" layoutY="33.0" stroke="#909090" strokeType="INSIDE" width="498.0" />
       <TextField fx:id="textField_filter" layoutX="447.0" layoutY="81.0" prefHeight="25.0" prefWidth="221.0" />
@@ -60,18 +60,20 @@
           </Menu>
         </menus>
       </MenuBar>
-      <Button fx:id="button_closeApp" layoutX="870.0" layoutY="662.0" mnemonicParsing="false" onAction="#closeApp" text="Beenden" AnchorPane.bottomAnchor="13.0" AnchorPane.rightAnchor="17.0" />
+      <Button fx:id="button_closeApp" layoutX="870.0" layoutY="662.0" maxWidth="74.0" minHeight="25.0" minWidth="74.0" mnemonicParsing="false" onAction="#closeApp" prefHeight="25.0" prefWidth="74.0" text="Beenden" AnchorPane.bottomAnchor="13.0" AnchorPane.rightAnchor="17.0" />
       <ProgressBar fx:id="progressBar" layoutX="350.0" layoutY="642.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="18.0" prefWidth="250.0" progress="0.0" AnchorPane.bottomAnchor="40.0" />
       <Button fx:id="button_cancelSearch" layoutX="14.0" layoutY="201.0" mnemonicParsing="false" onAction="#cancelSearch" text="Abbrechen" visible="false" />
       <Button fx:id="button_cancelExtract" layoutX="15.0" layoutY="662.0" mnemonicParsing="false" onAction="#cancelExtract" text="Abbrechen" visible="false" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="15.0" />
       <Label fx:id="label_status" alignment="CENTER" contentDisplay="CENTER" layoutX="350.0" layoutY="659.0" prefHeight="17.0" prefWidth="250.0" textAlignment="JUSTIFY" AnchorPane.bottomAnchor="24.0" />
-      <Button fx:id="button_extractSingle" layoutX="120.0" layoutY="662.0" mnemonicParsing="false" onAction="#extractSingle" text="Auswahl entpacken" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="120.0" />
-      <Button fx:id="button_extractAll" layoutX="16.0" layoutY="662.0" mnemonicParsing="false" onAction="#extractAll" text="Alle entpacken" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="16.0" />
+      <Button fx:id="button_extractSingle" layoutX="145.0" layoutY="662.0" maxWidth="125.0" minHeight="25.0" minWidth="125.0" mnemonicParsing="false" onAction="#extractSingle" prefHeight="25.0" prefWidth="125.0" text="Auswahl entpacken" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="145.0" />
+      <Button fx:id="button_extractAll" layoutX="15.0" layoutY="662.0" mnemonicParsing="false" onAction="#extractAll" prefHeight="25.0" prefWidth="125.0" text="Alle entpacken" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="15.0" />
       <ChoiceBox fx:id="choiceBox_tasks" layoutX="698.0" layoutY="133.0" prefHeight="25.0" prefWidth="84.0" />
       <Label layoutX="698.0" layoutY="116.0" text="Prozesse" />
       <CheckBox fx:id="checkBox_useExternalApp" layoutX="114.0" layoutY="104.0" mnemonicParsing="false" selected="true" text="Externen Archivar verwenden." />
       <TextField fx:id="textField_appDir" layoutX="25.0" layoutY="149.0" prefHeight="25.0" prefWidth="269.0" />
       <Label layoutX="24.0" layoutY="132.0" text="Anwendungspfad" />
-      <Button fx:id="button_findArchivist" layoutX="302.0" layoutY="149.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#findArchivist" text="Öffnen" />
+      <Button fx:id="button_findArchivist" layoutX="297.0" layoutY="149.0" maxHeight="1.7976931348623157E308" maxWidth="74.0" minHeight="25.0" minWidth="74.0" mnemonicParsing="false" onAction="#findArchivist" prefHeight="25.0" prefWidth="74.0" text="Öffnen" />
+      <Label layoutX="225.0" layoutY="36.0" text="Zusatz" />
+      <TextField fx:id="textField_rootAppend" layoutX="223.0" layoutY="53.0" promptText="z.B. home/" />
    </children>
 </AnchorPane>
