--- a/src/main/resources/de/craftingit/Main.fxml
+++ b/src/main/resources/de/craftingit/Main.fxml
@@ -19,19 +19,46 @@
 
 <AnchorPane fx:id="anchorPane_main" onDragDone="#searchArchives" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.craftingit.C_Main">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="148.0" layoutX="15.0" layoutY="33.0" stroke="#909090" strokeType="INSIDE" width="366.0" />
-      <Label layoutX="24.0" layoutY="36.0" text="Partition" />
-      <Button fx:id="button_updateRoots" layoutX="114.0" layoutY="53.0" maxWidth="100.0" minHeight="25.0" minWidth="100.0" mnemonicParsing="false" onAction="#updateRoots" prefHeight="25.0" prefWidth="100.0" text="Aktualisieren" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="148.0" layoutX="15.0" layoutY="33.0" stroke="#909090" strokeType="INSIDE" width="440.0" />
+      <Label layoutX="24.0" layoutY="36.0" text="Partition">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></Label>
+      <Button fx:id="button_updateRoots" layoutX="114.0" layoutY="53.0" maxWidth="100.0" minHeight="25.0" minWidth="100.0" mnemonicParsing="false" onAction="#updateRoots" prefHeight="25.0" prefWidth="100.0" text="Aktualisieren">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></Button>
       <ComboBox fx:id="comboBox_roots" layoutX="24.0" layoutY="53.0" prefHeight="25.0" prefWidth="84.0" />
-      <Button fx:id="button_search" layoutX="14.0" layoutY="201.0" maxWidth="74.0" minHeight="25.0" minWidth="74.0" mnemonicParsing="false" onAction="#searchArchives" prefHeight="25.0" prefWidth="74.0" text="Suchen" />
+      <Button fx:id="button_search" layoutX="14.0" layoutY="201.0" maxWidth="74.0" minHeight="25.0" minWidth="74.0" mnemonicParsing="false" onAction="#searchArchives" prefHeight="25.0" prefWidth="74.0" text="Suchen">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></Button>
       <ComboBox fx:id="comboBox_formats" layoutX="24.0" layoutY="100.0" prefHeight="25.0" prefWidth="84.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="148.0" layoutX="435.0" layoutY="33.0" stroke="#909090" strokeType="INSIDE" width="498.0" />
-      <TextField fx:id="textField_filter" layoutX="447.0" layoutY="81.0" prefHeight="25.0" prefWidth="221.0" />
-      <TextField fx:id="textField_exclude" layoutX="447.0" layoutY="133.0" prefHeight="25.0" prefWidth="221.0" />
-      <Label layoutX="447.0" layoutY="116.0" text="Dateiname soll nicht enthalten:" />
-      <Label layoutX="447.0" layoutY="64.0" text="Dateiname soll enthalten:" />
-      <PasswordField fx:id="pwField" layoutX="696.0" layoutY="81.0" prefHeight="25.0" prefWidth="221.0" />
-      <Label layoutX="696.0" layoutY="64.0" text="Passwort:" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="148.0" layoutX="463.0" layoutY="32.0" stroke="#909090" strokeType="INSIDE" width="470.0" />
+      <TextField fx:id="textField_filter" layoutX="473.0" layoutY="81.0" maxWidth="200.0" prefHeight="25.0" prefWidth="200.0">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></TextField>
+      <TextField fx:id="textField_exclude" layoutX="473.0" layoutY="133.0" maxWidth="200.0" prefHeight="25.0" prefWidth="200.0">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></TextField>
+      <Label layoutX="473.0" layoutY="116.0" text="Dateiname soll nicht enthalten">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></Label>
+      <Label layoutX="473.0" layoutY="64.0" text="Dateiname soll enthalten">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></Label>
+      <PasswordField fx:id="pwField" layoutX="722.0" layoutY="81.0" maxWidth="200.0" prefHeight="25.0" prefWidth="200.0">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></PasswordField>
+      <Label layoutX="722.0" layoutY="64.0" text="Passwort">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></Label>
       <TableView fx:id="tableView_archives" layoutX="14.0" layoutY="232.0" prefHeight="406.0" prefWidth="919.0" AnchorPane.bottomAnchor="62.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="17.0" AnchorPane.topAnchor="232.0">
         <columns>
             <TableColumn fx:id="tColumn_id" minWidth="83.0" prefWidth="83.0" text="Nummer" />
@@ -39,13 +66,19 @@
           <TableColumn fx:id="tColumn_status" minWidth="225.0" prefWidth="225.0" text="Status" />
         </columns>
       </TableView>
-      <Label layoutX="24.0" layoutY="83.0" text="Format" />
-      <Label layoutX="439.0" layoutY="36.0" text="Optional">
+      <Label layoutX="24.0" layoutY="83.0" text="Format">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></Label>
+      <Label layoutX="473.0" layoutY="36.0" text="Optional">
+         <font>
+            <Font name="SansSerif Bold" size="12.0" />
          </font>
       </Label>
-      <CheckBox fx:id="checkBox_hideExtracted" layoutX="114.0" layoutY="205.0" mnemonicParsing="false" onAction="#hideExtracted" text="Entpackte Archive verbergen." />
+      <CheckBox fx:id="checkBox_hideExtracted" layoutX="114.0" layoutY="205.0" mnemonicParsing="false" onAction="#hideExtracted" text="Entpackte Archive verbergen.">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></CheckBox>
       <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="950.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <menus>
           <Menu mnemonicParsing="false" text="Datei">
@@ -60,20 +93,59 @@
           </Menu>
         </menus>
       </MenuBar>
-      <Button fx:id="button_closeApp" layoutX="870.0" layoutY="662.0" maxWidth="74.0" minHeight="25.0" minWidth="74.0" mnemonicParsing="false" onAction="#closeApp" prefHeight="25.0" prefWidth="74.0" text="Beenden" AnchorPane.bottomAnchor="13.0" AnchorPane.rightAnchor="17.0" />
-      <ProgressBar fx:id="progressBar" layoutX="350.0" layoutY="642.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="18.0" prefWidth="250.0" progress="0.0" AnchorPane.bottomAnchor="40.0" />
-      <Button fx:id="button_cancelSearch" layoutX="14.0" layoutY="201.0" mnemonicParsing="false" onAction="#cancelSearch" text="Abbrechen" visible="false" />
-      <Button fx:id="button_cancelExtract" layoutX="15.0" layoutY="662.0" mnemonicParsing="false" onAction="#cancelExtract" text="Abbrechen" visible="false" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="15.0" />
-      <Label fx:id="label_status" alignment="CENTER" contentDisplay="CENTER" layoutX="350.0" layoutY="659.0" prefHeight="17.0" prefWidth="250.0" textAlignment="JUSTIFY" AnchorPane.bottomAnchor="24.0" />
-      <Button fx:id="button_extractSingle" layoutX="145.0" layoutY="662.0" maxWidth="125.0" minHeight="25.0" minWidth="125.0" mnemonicParsing="false" onAction="#extractSingle" prefHeight="25.0" prefWidth="125.0" text="Auswahl entpacken" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="145.0" />
-      <Button fx:id="button_extractAll" layoutX="15.0" layoutY="662.0" mnemonicParsing="false" onAction="#extractAll" prefHeight="25.0" prefWidth="125.0" text="Alle entpacken" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="15.0" />
-      <ChoiceBox fx:id="choiceBox_tasks" layoutX="698.0" layoutY="133.0" prefHeight="25.0" prefWidth="84.0" />
-      <Label layoutX="698.0" layoutY="116.0" text="Prozesse" />
-      <CheckBox fx:id="checkBox_useExternalApp" layoutX="114.0" layoutY="104.0" mnemonicParsing="false" selected="true" text="Externen Archivar verwenden." />
-      <TextField fx:id="textField_appDir" layoutX="25.0" layoutY="149.0" prefHeight="25.0" prefWidth="269.0" />
-      <Label layoutX="24.0" layoutY="132.0" text="Anwendungspfad" />
-      <Button fx:id="button_findArchivist" layoutX="297.0" layoutY="149.0" maxHeight="1.7976931348623157E308" maxWidth="74.0" minHeight="25.0" minWidth="74.0" mnemonicParsing="false" onAction="#findArchivist" prefHeight="25.0" prefWidth="74.0" text="Öffnen" />
-      <Label layoutX="225.0" layoutY="36.0" text="Zusatz" />
-      <TextField fx:id="textField_rootAppend" layoutX="223.0" layoutY="53.0" promptText="z.B. home/" />
+      <Button fx:id="button_closeApp" layoutX="870.0" layoutY="662.0" maxWidth="74.0" minHeight="25.0" minWidth="74.0" mnemonicParsing="false" onAction="#closeApp" prefHeight="25.0" prefWidth="74.0" text="Beenden" AnchorPane.bottomAnchor="13.0" AnchorPane.rightAnchor="17.0">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></Button>
+      <ProgressBar fx:id="progressBar" layoutX="350.0" layoutY="642.0" maxHeight="-Infinity" maxWidth="250.0" minHeight="-Infinity" minWidth="250.0" prefHeight="18.0" prefWidth="250.0" progress="0.0" AnchorPane.bottomAnchor="40.0" />
+      <Button fx:id="button_cancelSearch" layoutX="14.0" layoutY="201.0" mnemonicParsing="false" onAction="#cancelSearch" text="Abbrechen" visible="false">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></Button>
+      <Button fx:id="button_cancelExtract" layoutX="15.0" layoutY="662.0" mnemonicParsing="false" onAction="#cancelExtract" text="Abbrechen" visible="false" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="15.0">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></Button>
+      <Label fx:id="label_status" alignment="CENTER" contentDisplay="CENTER" layoutX="350.0" layoutY="659.0" prefHeight="17.0" prefWidth="250.0" textAlignment="JUSTIFY" AnchorPane.bottomAnchor="24.0">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></Label>
+      <Button fx:id="button_extractSingle" layoutX="145.0" layoutY="662.0" maxWidth="125.0" minHeight="25.0" minWidth="125.0" mnemonicParsing="false" onAction="#extractSingle" prefHeight="25.0" prefWidth="125.0" text="Auswahl entpacken" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="145.0">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></Button>
+      <Button fx:id="button_extractAll" layoutX="15.0" layoutY="662.0" mnemonicParsing="false" onAction="#extractAll" prefHeight="25.0" prefWidth="125.0" text="Alle entpacken" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="15.0">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></Button>
+      <ChoiceBox fx:id="choiceBox_tasks" layoutX="724.0" layoutY="133.0" prefHeight="25.0" prefWidth="84.0" />
+      <Label layoutX="724.0" layoutY="116.0" text="Prozesse">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></Label>
+      <CheckBox fx:id="checkBox_useExternalApp" layoutX="114.0" layoutY="104.0" mnemonicParsing="false" selected="true" text="Externen Archivar verwenden.">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></CheckBox>
+      <TextField fx:id="textField_appDir" layoutX="25.0" layoutY="149.0" maxWidth="339.0" minWidth="339.0" prefHeight="25.0" prefWidth="339.0">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></TextField>
+      <Label layoutX="24.0" layoutY="132.0" text="Anwendungspfad">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></Label>
+      <Button fx:id="button_findArchivist" layoutX="370.0" layoutY="149.0" maxHeight="1.7976931348623157E308" maxWidth="74.0" minHeight="25.0" minWidth="74.0" mnemonicParsing="false" onAction="#findArchivist" prefHeight="25.0" prefWidth="74.0" text="Öffnen">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></Button>
+      <Label layoutX="225.0" layoutY="36.0" text="Verzeichnis">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></Label>
+      <TextField fx:id="textField_rootAppend" layoutX="223.0" layoutY="53.0" maxWidth="222.0" minWidth="222.0" prefHeight="25.0" prefWidth="222.0" promptText="optional, z.B. &quot;home/&quot;">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></TextField>
    </children>
 </AnchorPane>
