--- a/src/main/resources/de/craftingit/Main.fxml
+++ b/src/main/resources/de/craftingit/Main.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -36,11 +35,11 @@
          </font></Button>
       <ComboBox fx:id="comboBox_formats" layoutX="24.0" layoutY="111.0" prefHeight="25.0" prefWidth="84.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="171.0" layoutX="463.0" layoutY="32.0" stroke="#909090" strokeType="INSIDE" width="470.0" />
-      <TextField fx:id="textField_filter" layoutX="473.0" layoutY="81.0" maxWidth="200.0" prefHeight="25.0" prefWidth="200.0">
+      <TextField fx:id="textField_includeFilter" layoutX="473.0" layoutY="81.0" maxWidth="200.0" prefHeight="25.0" prefWidth="200.0">
          <font>
             <Font name="SansSerif Regular" size="12.0" />
          </font></TextField>
-      <TextField fx:id="textField_exclude" layoutX="473.0" layoutY="133.0" maxWidth="200.0" prefHeight="25.0" prefWidth="200.0">
+      <TextField fx:id="textField_excludeFilter" layoutX="473.0" layoutY="133.0" maxWidth="200.0" prefHeight="25.0" prefWidth="200.0">
          <font>
             <Font name="SansSerif Regular" size="12.0" />
          </font></TextField>
@@ -60,11 +59,11 @@
          <font>
             <Font name="SansSerif Regular" size="12.0" />
          </font></Label>
-      <TableView fx:id="tableView_archives" layoutX="14.0" layoutY="244.0" prefHeight="394.0" prefWidth="919.0" AnchorPane.bottomAnchor="62.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="17.0" AnchorPane.topAnchor="244.0">
+      <TableView fx:id="tableView_archives" layoutX="14.0" layoutY="244.0" onMouseReleased="#detectTableSelection" prefHeight="394.0" prefWidth="919.0" AnchorPane.bottomAnchor="62.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="17.0" AnchorPane.topAnchor="244.0">
         <columns>
-            <TableColumn fx:id="tColumn_id" minWidth="83.0" prefWidth="83.0" text="Nummer" />
-          <TableColumn fx:id="tColumn_dir" minWidth="610.0" prefWidth="610.0" text="Dateipfad" />
-          <TableColumn fx:id="tColumn_status" minWidth="225.0" prefWidth="225.0" text="Status" />
+            <TableColumn fx:id="tColumn_id" editable="false" minWidth="83.0" prefWidth="83.0" text="Nummer" />
+          <TableColumn fx:id="tColumn_dir" editable="false" minWidth="610.0" prefWidth="610.0" text="Dateipfad" />
+          <TableColumn fx:id="tColumn_status" editable="false" minWidth="225.0" prefWidth="225.0" text="Status" />
         </columns>
       </TableView>
       <Label layoutX="24.0" layoutY="94.0" text="Format">
@@ -114,15 +113,14 @@
          <font>
             <Font name="SansSerif Regular" size="12.0" />
          </font></Label>
-      <Button fx:id="button_extractSingle" layoutX="145.0" layoutY="662.0" maxWidth="125.0" minHeight="25.0" minWidth="125.0" mnemonicParsing="false" onAction="#extractSingle" prefHeight="25.0" prefWidth="125.0" text="Auswahl entpacken" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="145.0">
+      <Button fx:id="button_extractSingle" layoutX="145.0" layoutY="662.0" maxWidth="125.0" minHeight="25.0" minWidth="125.0" mnemonicParsing="false" onAction="#extractArchive" prefHeight="25.0" prefWidth="125.0" text="Auswahl entpacken" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="145.0">
          <font>
             <Font name="SansSerif Regular" size="12.0" />
          </font></Button>
-      <Button fx:id="button_extractAll" layoutX="15.0" layoutY="662.0" mnemonicParsing="false" onAction="#extractAll" prefHeight="25.0" prefWidth="125.0" text="Alle entpacken" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="15.0">
+      <Button fx:id="button_extractAll" layoutX="15.0" layoutY="662.0" mnemonicParsing="false" onAction="#extractArchive" prefHeight="25.0" prefWidth="125.0" text="Alle entpacken" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="15.0">
          <font>
             <Font name="SansSerif Regular" size="12.0" />
          </font></Button>
-      <ChoiceBox fx:id="choiceBox_tasks" layoutX="724.0" layoutY="133.0" prefHeight="25.0" prefWidth="84.0" />
       <Label layoutX="724.0" layoutY="116.0" text="Prozesse">
          <font>
             <Font name="SansSerif Regular" size="12.0" />
@@ -161,5 +159,6 @@
             <Font name="SansSerif Regular" size="12.0" />
          </font>
       </Button>
+      <ComboBox fx:id="comboBox_tasks" layoutX="722.0" layoutY="133.0" prefHeight="25.0" prefWidth="84.0" />
    </children>
 </AnchorPane>
